# parse_CVEListV5

./: README.md  parse_cve5.py  pyproject.toml
parsed_outputs/: CVE-2017-0144_parsed.json  CVE-2021-40444_parsed.json  CVE-2024-0204_parsed.json  CVE-2024-1007_parsed.json  CVE-2025-4632_parsed.json  CVE-2025-4649_parsed.json  full-record-advanced-example_parsed.json
sample_json_cve/: full-record-advanced-example.json
